--- a/src/MedAgenda_backend/package.json
+++ b/src/MedAgenda_backend/package.json
@@ -18,6 +18,10 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.1",
-    "nodemailer": "^6.10.0"
+    "nodemailer": "^6.10.0",
+    "cloudinary": "^2.3.0",
+    "dotenv": "^16.4.5",
+    "nodemon": "^3.1.4",
+    "validator": "^13.12.0"
   }
 }
