--- a/src/MedAgenda_mobile/package.json
+++ b/src/MedAgenda_mobile/package.json
@@ -16,13 +16,18 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^1.22.3",
+    "@react-native-community/datetimepicker": "^7.6.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "axios": "^1.6.7",
+    "date-fns": "^3.3.1",
     "expo": "~52.0.38",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.8",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
+    "expo-image-picker": "~14.7.1",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.18",
     "expo-splash-screen": "~0.29.22",
