--- a/MedAgenda_mobile/package.json
+++ b/MedAgenda_mobile/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@expo/metro-config": "~0.20.0",
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/datetimepicker": "^8.3.0",
+    "axios": "^1.9.0",
     "expo": "53.0.9",
     "expo-constants": "~17.1.6",
     "expo-font": "~13.3.1",
@@ -19,6 +21,7 @@
     "expo-router": "~5.0.7",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
+    "expo-updates": "^0.28.13",
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-gesture-handler": "~2.24.0",
