--- a/src/admin/package.json
+++ b/src/admin/package.json
@@ -16,7 +16,17 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^6.30.0",
     "react-toastify": "^11.0.5",
-    "tailwindcss": "^4.1.5"
+    "tailwindcss": "^4.1.5",
+    "bcrypt": "^6.0.0",
+    "cloudinary": "^2.6.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.15.0",
+    "multer": "^2.0.0",
+    "nodemon": "^3.1.10",
+    "validator": "^13.15.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
