--- a/src/MedAgenda_mobile/package.json
+++ b/src/MedAgenda_mobile/package.json
@@ -22,6 +22,7 @@
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
     "expo-updates": "^0.28.13",
+    "mongodb": "^6.16.0",
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-gesture-handler": "~2.24.0",
