--- a/src/MedAgenda_backend/package.json
+++ b/src/MedAgenda_backend/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.1",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node --env-file=.env index.js",
+    "dev": "node --watch --trace-warnings --env-file=.env index.js"
   },
   "author": "",
   "license": "ISC",
