--- a/src/MedAgenda_mobile/package.json
+++ b/src/MedAgenda_mobile/package.json
@@ -13,12 +13,16 @@
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/datetimepicker": "^8.3.0",
+    "@react-native-picker/picker": "^2.11.0",
     "axios": "^1.9.0",
     "ci": "^2.3.0",
+    "cloudinary-react-native": "^1.0.1",
     "expo": "53.0.9",
     "expo-constants": "~17.1.6",
     "expo-font": "~13.3.1",
+    "expo-image-picker": "^16.1.4",
     "expo-linking": "~7.1.5",
+    "expo-media-library": "^17.1.6",
     "expo-router": "~5.0.7",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
