--- a/src/MedAgenda_backend/package.json
+++ b/src/MedAgenda_backend/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.1",
   "main": "index.js",
   "scripts": {
-    "start": "node --env-file=.env index.js",
-    "dev": "node --watch --trace-warnings --env-file=.env index.js"
+    "start": "node index.js",
+    "dev": "node --watch --trace-warnings --env-file=.env index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
@@ -24,6 +25,7 @@
     "nodemon": "^3.1.4",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.2",
-    "validator": "^13.12.0"
+    "validator": "^13.12.0",
+    "axios": "^1.7.2"
   }
 }
